# quadrature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  quadrature.hpp
source/: gauss_jacobi.cpp  gauss_legendre.cpp  gauss_lobatto.cpp
tests/: .gitignore  gauss_jacobi.cpp  gauss_legendre.cpp  gauss_lobatto.cpp
